[package]
name = "interceptor-wasm"
version = "0.1.12"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures-core = "0.3.31"
futures-util = "0.3.31"
uuid = { version = "1", features = ["js", "v4"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "console",
    "Response",
    "Request",
    "Url",
    "RequestInit",
    "ResponseInit",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "FormData",
    "Blob",
    "File",
    "UrlSearchParams",
    "RequestMode",
    "AbortSignal",
    "ReferrerPolicy",
    "Event",
    "IdbTransactionMode",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbOpenDbRequest",
    "DomStringList",
    "IdbObjectStore",
    "IdbRequest",
    "IdbObjectStoreParameters",
    "DomException",
    "Window",
] }
once_cell = "1.21.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.4"
bytes = "1.10.1"
js-sys = "0.3.77"

# ntor
hmac = "0.12"
sha2 = "0.10"
curve25519-dalek = "4.1.1"
x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }
getrandom = { version = "0.2", features = ["js"] }
ntor = { git = "https://github.com/globe-and-citizen/ntor.git", tag = "0.1.0" }
#ntor = { path = "../ntor" }

aes-gcm = "0.10"
serde = { version = "1.0.219", features = ["derive"] }
wasm-streams = "0.4.2"
serde_bytes = "0.11.17"
url = "2.5.4"


[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'
