[package]
name = "interceptor-wasm"
version = "0.1.14"
edition = "2024"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "1", features = ["js", "v4"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "console",
    "Response",
    "Request",
    "Url",
    "RequestInit",
    "ResponseInit",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "FormData",
    "Blob",
    "File",
    "UrlSearchParams",
    "RequestMode",
    "AbortSignal",
    "ReferrerPolicy",
    "Event",
    "IdbTransactionMode",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbOpenDbRequest",
    "DomStringList",
    "IdbObjectStore",
    "IdbRequest",
    "IdbObjectStoreParameters",
    "DomException",
    "Window",
] }
once_cell = "1.21.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.4"
bytes = "1.10.1"
js-sys = "0.3.77"
ntor = { git = "https://github.com/globe-and-citizen/ntor.git", tag = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
wasm-streams = "0.4.2"
url = "2.5.4"
futures = "0.3.31"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'
