[package]
name = "layer8-interceptor-production"
version = "0.3.0"
edition = "2024"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[lib]
crate-type = [
    "cdylib", # Necessary for WebAssembly targets
    "rlib",   # Necessary for linking test binaries
]

[dependencies]
uuid = { version = "1", features = ["js", "v4"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "console",
    "Response",
    "Request",
    "Url",
    "RequestInit",
    "ResponseInit",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "FormData",
    "Blob",
    "File",
    "UrlSearchParams",
    "RequestMode",
    "AbortSignal",
    "ReferrerPolicy",
    "Event",
    "IdbTransactionMode",
    "IdbFactory",
    "IdbDatabase",
    "IdbTransaction",
    "IdbOpenDbRequest",
    "DomStringList",
    "IdbObjectStore",
    "IdbRequest",
    "IdbObjectStoreParameters",
    "DomException",
    "Window",
    "Document",
] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
ntor = { git = "https://github.com/globe-and-citizen/ntor.git", tag = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
wasm-streams = "0.4.2"
url = "2.5.4"
futures = "0.3.31"
bytes = "1.10.1"
hyper = "1.7.0"
x25519-dalek = "2.0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
